# socket-chat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yaml
socket_chat/: client.py  server.py
socket_chat/scripts/: client.py  server.py
tests/: test_server.py
