[tool.poetry]
name = "socket-chat"
version = "0.1.0"
description = "chat builded with sockets"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"
packages = [{include = "socket_chat"}]

[tool.poetry.scripts]
socket-chat = "socket_chat.scripts.server:main"
chat-client = "socket_chat.scripts.client:main"

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"
aioconsole = "^0.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
mypy = "^1.2.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"
flake8-pyproject = "^1.2.3"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "__pycache__"
addopts = "--strict-markers"

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 6
statistics = false
max-line-length = 80
doctests = true
enable-extensions = "G"
isort-show-traceback = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
line_length = 79

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
follow_imports = "skip"
